--- a/ExtraFEMFeatures/FEniCS.jl tutorial.ipynb
+++ b/ExtraFEMFeatures/FEniCS.jl tutorial.ipynb
@@ -4,7 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This small tutorial demonstrates the usability of the FEniCS.jl wrapper. While the tutorial can be read on its own, a good addition to the tutorial can be found directly from the FEniCS website ( https://fenicsproject.org/documentation/)"
+    "## Solving a Nonlinear Poisson equation using FEniCS.jl\n",
+    "\n",
+    "In this demo, we solve the nonlinear poisson equation with the following constraints adapted from **[here](https://github.com/hplgit/fenics-tutorial/blob/master/pub/python/vol1/ft01_poisson.py)**\n",
+    "\n",
+    "$-\\bigtriangleup(u) = f$    in the unit square\n",
+    "  \n",
+    "$u = u_D$  on the boundary\n",
+    "            \n",
+    "$u_D$ $=$ $1 + x^2 + 2y^2$\n",
+    "  \n",
+    "$f = -6$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This small tutorial demonstrates the usability of the FEniCS.jl wrapper. While the tutorial can be read on its own, a good addition to the tutorial can be found directly from the FEniCS website ( https://fenicsproject.org/documentation/), where some of the FEniCS specific functions are described in further detail."
    ]
   },
   {
